# automod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  example.toml
crates/automod/: Cargo.toml
crates/automod/src/: args.rs  bot.rs  config.rs  main.rs
crates/lemmy_client/: Cargo.toml
crates/lemmy_client/src/: auth.rs  comment.rs  endpoints.rs  lib.rs  model.rs  modlog.rs  person.rs  post.rs  private_message.rs  site.rs
crates/plugin_common/: Cargo.toml
crates/plugin_common/src/: lib.rs
crates/plugin_mod_log/: Cargo.toml
crates/plugin_mod_log/src/: config.rs  lib.rs
crates/plugin_private_message/: Cargo.toml
crates/plugin_private_message/src/: commands.rs  config.rs  lib.rs
docs/decisions/: 0000-why-rust.md  INDEX.md  template.md
docs/plugins/: ModLog.md  PrivateMessage.md
