[package]
name = "lemmy_client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chrono = { workspace = true }
http-cache-reqwest = { workspace = true }
lemmy_api_common = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
url = { workspace = true }
